Fix some layout issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@ h1, h2, h3, h4, h5, h6 {
 
 * {
     font-family: 'Exo', sans-serif;
+    max-width:  100%;
 }
 
 p {
@@ -20,6 +21,7 @@ pre {
     background-color: rgb(222, 203, 186);
     padding: 1em;
     border-radius: 0.5em;
+    overflow-x: scroll;
 }
 
 code {
@@ -170,10 +172,13 @@ header .pad {
 }
 
 .card-grid {
+    display: -webkit-flex;
     display: flex;
     margin:  0;
     padding: 0;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-justify-content: space-around;
     justify-content: space-around;
 }
 
